save close and halt

--- a/mars_data_challenge_part_1.ipynb
+++ b/mars_data_challenge_part_1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "695b26b6",
+   "id": "77b70bfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b483b7a3",
+   "id": "260cb0dc",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "55679076",
+   "id": "40f815b9",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0a03629d",
+   "id": "86ef7ac5",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6fb8a7d0",
+   "id": "a3f92c72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "22365242",
+   "id": "02076640",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f46e5312",
+   "id": "95364ca6",
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "931b67c9",
+   "id": "33214349",
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "47287b1a",
+   "id": "96f2cebf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e4633152",
+   "id": "b9d0508a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "95f2d9d8",
+   "id": "baea8bb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "742ee6d7",
+   "id": "48691e28",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0e78c336",
+   "id": "d63d7c78",
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "09f40b41",
+   "id": "5d0ad063",
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8dba13e7",
+   "id": "ab0d9f8f",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4ac7286a",
+   "id": "c1afdf2d",
    "metadata": {},
    "outputs": [
     {
@@ -1134,8 +1134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "9812bd34",
+   "execution_count": 46,
+   "id": "bfb8e240",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,8 +1146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "5b966ff8",
+   "execution_count": 47,
+   "id": "d6380c80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,20 +1181,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "94f57470",
+   "execution_count": 48,
+   "id": "a16d913e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'img_url': 'https://marshemispheres.com/images/full.jpg'},\n",
-       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg'},\n",
-       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg'},\n",
-       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}]"
+       "[{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg',\n",
+       "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg',\n",
+       "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg',\n",
+       "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,13 +1209,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e36ce36a",
+   "execution_count": 49,
+   "id": "bfbb7c06",
    "metadata": {},
    "outputs": [],
    "source": [
     "browser.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e4e708d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
